mudança do titulo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Borges - Desenvolvedor e Designer</title>
+  <title>Borges - Desenvolvedor e UX/UX Designer</title>
   <meta name="description" content="Desenvolvidor Front End & UX/UI Designer. Localizado em Minas Gerais">
   <link rel="stylesheet" href="./css/style.min.css">
 </head>
