--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Borges - Desenvolvedor e UX/UX Designer</title>
   <meta name="description" content="Desenvolvidor Front End & UX/UI Designer. Localizado em Minas Gerais">
   <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
